--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -10,5 +10,12 @@
 <body>
 
 <header>
-    Je suis l'header
+   <ul>
+       <li>
+           <a href="{{ path('home') }}">Accueil</a>
+       </li>
+       <li>
+           <a href="{{ path('stars') }}">Liste des stars</a>
+       </li>
+   </ul>
 </header>
